# eigenvalue

./: .gitignore  README.md  meson.build  run.in
.github/: FUNDING.yml
.github/workflows/: build.yml
data/: meson.build  org.sigxcpu.Eigenvalue.desktop.in
po/: POTFILES.in  de.po  meson.build
src/: ev-application.c  ev-application.h  ev-format-builder.c  ev-format-builder.h  ev-matrix.c  ev-matrix.h  ev-prompt.c  ev-prompt.h  main.c  meson.build
subprojects/: libcmatrix.wrap
